/**
 * Shared domain model class representing a Child identifier.
 * @class ChildId
 */
export class ChildId {
    /**
     * @param {string} value - The child identifier value.
     */
    constructor(value = '') {
        this.value = value;
    }
}
