/**
 * Shared domain model class representing a Driver identifier.
 * @class DriverId
 */
export class DriverId {
    /**
     * @param {string} value - The driver identifier value.
     */
    constructor(value = '') {
        this.value = value;
    }
}
