/**
 * Shared domain model class representing an Organization identifier.
 * @class OrganizationId
 */
export class OrganizationId {
    /**
     * @param {string} value - The organization identifier value.
     */
    constructor(value = '') {
        this.value = value;
    }
}
