/**
 * Shared domain model class representing a Parent identifier.
 * @class ParentId
 */
export class ParentId {
    /**
     * @param {string} value - The parent identifier value.
     */
    constructor(value = '') {
        this.value = value;
    }
}
