/**
 * Shared domain model class representing a Route identifier.
 * @class RouteId
 */
export class RouteId {
    /**
     * @param {string} value - The route identifier value.
     */
    constructor(value = '') {
        this.value = value;
    }
}
