/**
 * Shared domain model class representing a Trip identifier.
 * @class TripId
 */
export class TripId {
    /**
     * @param {string} value - The trip identifier value.
     */
    constructor(value = '') {
        this.value = value;
    }
}
