/**
 * Shared domain model class representing a User identifier.
 * @class UserId
 */
export class UserId {
    /**
     * @param {string} value - The user identifier value.
     */
    constructor(value = '') {
        this.value = value;
    }
}
