@startuml
skinparam monochrome false

package "shared.domain.model" {
  class OrganizationId {
    - value: string
  }
  class UserId {
    - value: string
  }
  class ParentId {
    - value: string
  }
  class DriverId {
    - value: string
  }
  class ChildId {
    - value: string
  }
  class RouteId {
    - value: string
  }
  class TripId {
    - value: string
  }
  class FullName {
    - firstName: string
    - lastName: string
    + getFullName(): string
  }
  class Coordinates {
    - latitude: number
    - longitude: number
    + isValid(): boolean
  }
  class BaseEntity {
    - id: string
  }
}

package "shared.infrastructure" {
  class BaseApi {
    - http: AxiosInstance
    + get http(): AxiosInstance
  }
  class BaseEndpoint {
    - http: AxiosInstance
    - endpointPath: string
    + getAll()
    + getById(id)
    + create(resource)
    + update(id, resource)
    + delete(id)
  }
}

package "shared.presentation.components" {
  class Layout {
    - hideNav: boolean
    - navItems
    - roleLabel: string
  }
  class NavBar {
    - currentUser
    - isAuthenticated: boolean
    - navItems
    + navigateTo(route): void
    + logout(): void
  }
  class LanguageSwitcher {
    - locale: string
    - availableLocales: string[]
  }
  class FooterContent {
    ' static content
  }
}

class App

App --> Layout : uses
Layout --> NavBar : uses
Layout --> LanguageSwitcher : uses
Layout --> FooterContent : uses
BaseEndpoint ..> BaseApi : uses

@enduml
